// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout component Letter layout Matches snapshot 1`] = `
Array [
  <main>
    <nav>
      <ul
        className="list"
      >
        <li
          className="listItem"
        >
          <a
            href="/letter/a"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            a
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/a2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            á
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/b"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            b
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/d"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            d
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/e"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            e
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/e2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            é
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/f"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            f
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/g"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            g
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/h"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            h
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/i"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            i
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/i2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            í
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/j"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            j
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/k"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            k
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/l"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            l
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/m"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            m
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/n"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            n
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/o"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            o
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/o2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ó
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/p"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            p
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/r"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            r
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/s"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            s
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/t"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            t
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/u"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            u
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/u2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ú
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/v"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            v
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/y"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            y
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/y2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ý
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/th"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            þ
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/ae"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            æ
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/oe3"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            œ
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/oe"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ö
          </a>
        </li>
      </ul>
      <form
        onSubmit={[Function]}
      >
        <input
          name="search"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          type="submit"
        >
          Search
        </button>
      </form>
    </nav>
    <div>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cleasby & Vigfusson Dictionary
      </a>
      <a
        href="/letter/a"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Letter A
      </a>
      <script
        dangerouslySetInnerHTML={
          Object {
            "__html": "{\\"@context\\":\\"https://schema.org/\\",\\"@type\\":\\"BreadcrumbList\\",\\"itemListElement\\":[{\\"@type\\":\\"ListItem\\",\\"position\\":1,\\"name\\":\\"Cleasby & Vigfusson Dictionary\\",\\"item\\":\\"undefined/\\"},{\\"@type\\":\\"ListItem\\",\\"position\\":2,\\"name\\":\\"Letter A\\",\\"item\\":\\"undefined/letter/a\\"}]}",
          }
        }
        type="application/ld+json"
      />
    </div>
  </main>,
  <footer>
    <hr />
    <section>
      <h2>
        About
      </h2>
      <p>
        Based on Cleasby & Vigfusson Dictionary Old Norse dictionary.
      </p>
      <p>
        <em>
          Icelandic-English
        </em>
         dictionary was started by Richard Cleasby and finished by Gudbrand Vigfusson.
      </p>
      <p>
        It was published in 1874, which leads to there being many public domain versions of the book available.
      </p>
    </section>
    <nav>
      <p>
        Dictionary project
      </p>
      <ul>
        <li>
          <a
            href="https://github.com/stscoundrel/cleasby-vigfusson-next"
            rel="noopener noreferrer"
            target="_blank"
          >
            Source code
          </a>
        </li>
        <li>
          <a
            href="https://github.com/stscoundrel/cleasby-vigfusson-dictionary"
            rel="noopener noreferrer"
            target="_blank"
          >
            Data source
          </a>
        </li>
      </ul>
    </nav>
    <nav>
      <p>
        Quick links
      </p>
      <ul>
        <li>
          <a
            href="/letter/a"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            a
          </a>
        </li>
        <li>
          <a
            href="/letter/a2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            á
          </a>
        </li>
        <li>
          <a
            href="/letter/b"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            b
          </a>
        </li>
        <li>
          <a
            href="/letter/d"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            d
          </a>
        </li>
        <li>
          <a
            href="/letter/e"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            e
          </a>
        </li>
        <li>
          <a
            href="/letter/e2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            é
          </a>
        </li>
        <li>
          <a
            href="/letter/f"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            f
          </a>
        </li>
        <li>
          <a
            href="/letter/g"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            g
          </a>
        </li>
        <li>
          <a
            href="/letter/h"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            h
          </a>
        </li>
        <li>
          <a
            href="/letter/i"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            i
          </a>
        </li>
        <li>
          <a
            href="/letter/i2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            í
          </a>
        </li>
        <li>
          <a
            href="/letter/j"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            j
          </a>
        </li>
        <li>
          <a
            href="/letter/k"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            k
          </a>
        </li>
        <li>
          <a
            href="/letter/l"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            l
          </a>
        </li>
        <li>
          <a
            href="/letter/m"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            m
          </a>
        </li>
        <li>
          <a
            href="/letter/n"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            n
          </a>
        </li>
        <li>
          <a
            href="/letter/o"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            o
          </a>
        </li>
        <li>
          <a
            href="/letter/o2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ó
          </a>
        </li>
        <li>
          <a
            href="/letter/p"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            p
          </a>
        </li>
        <li>
          <a
            href="/letter/r"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            r
          </a>
        </li>
        <li>
          <a
            href="/letter/s"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            s
          </a>
        </li>
        <li>
          <a
            href="/letter/t"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            t
          </a>
        </li>
        <li>
          <a
            href="/letter/u"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            u
          </a>
        </li>
        <li>
          <a
            href="/letter/u2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ú
          </a>
        </li>
        <li>
          <a
            href="/letter/v"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            v
          </a>
        </li>
        <li>
          <a
            href="/letter/y"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            y
          </a>
        </li>
        <li>
          <a
            href="/letter/y2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ý
          </a>
        </li>
        <li>
          <a
            href="/letter/th"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            þ
          </a>
        </li>
        <li>
          <a
            href="/letter/ae"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            æ
          </a>
        </li>
        <li>
          <a
            href="/letter/oe3"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            œ
          </a>
        </li>
        <li>
          <a
            href="/letter/oe"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ö
          </a>
        </li>
      </ul>
    </nav>
    <small>
      Copyright © 2020 Sampo Silvennoinen / StScoundrel
    </small>
  </footer>,
]
`;

exports[`Layout component Word layout Matches snapshot 1`] = `
Array [
  <main>
    <nav>
      <ul
        className="list"
      >
        <li
          className="listItem"
        >
          <a
            href="/letter/a"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            a
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/a2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            á
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/b"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            b
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/d"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            d
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/e"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            e
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/e2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            é
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/f"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            f
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/g"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            g
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/h"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            h
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/i"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            i
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/i2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            í
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/j"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            j
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/k"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            k
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/l"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            l
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/m"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            m
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/n"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            n
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/o"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            o
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/o2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ó
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/p"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            p
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/r"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            r
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/s"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            s
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/t"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            t
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/u"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            u
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/u2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ú
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/v"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            v
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/y"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            y
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/y2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ý
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/th"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            þ
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/ae"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            æ
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/oe3"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            œ
          </a>
        </li>
        <li
          className="listItem"
        >
          <a
            href="/letter/oe"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ö
          </a>
        </li>
      </ul>
      <form
        onSubmit={[Function]}
      >
        <input
          name="search"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          type="submit"
        >
          Search
        </button>
      </form>
    </nav>
    <div>
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cleasby & Vigfusson Dictionary
      </a>
      <a
        href="/letter/S"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Letter S
      </a>
      <a
        href="/word/SKILJA"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Skilja
      </a>
      <script
        dangerouslySetInnerHTML={
          Object {
            "__html": "{\\"@context\\":\\"https://schema.org/\\",\\"@type\\":\\"BreadcrumbList\\",\\"itemListElement\\":[{\\"@type\\":\\"ListItem\\",\\"position\\":1,\\"name\\":\\"Cleasby & Vigfusson Dictionary\\",\\"item\\":\\"undefined/\\"},{\\"@type\\":\\"ListItem\\",\\"position\\":2,\\"name\\":\\"Letter S\\",\\"item\\":\\"undefined/letter/S\\"},{\\"@type\\":\\"ListItem\\",\\"position\\":3,\\"name\\":\\"Skilja\\",\\"item\\":\\"undefined/word/SKILJA\\"}]}",
          }
        }
        type="application/ld+json"
      />
    </div>
  </main>,
  <footer>
    <hr />
    <section>
      <h2>
        About
      </h2>
      <p>
        Based on Cleasby & Vigfusson Dictionary Old Norse dictionary.
      </p>
      <p>
        <em>
          Icelandic-English
        </em>
         dictionary was started by Richard Cleasby and finished by Gudbrand Vigfusson.
      </p>
      <p>
        It was published in 1874, which leads to there being many public domain versions of the book available.
      </p>
    </section>
    <nav>
      <p>
        Dictionary project
      </p>
      <ul>
        <li>
          <a
            href="https://github.com/stscoundrel/cleasby-vigfusson-next"
            rel="noopener noreferrer"
            target="_blank"
          >
            Source code
          </a>
        </li>
        <li>
          <a
            href="https://github.com/stscoundrel/cleasby-vigfusson-dictionary"
            rel="noopener noreferrer"
            target="_blank"
          >
            Data source
          </a>
        </li>
      </ul>
    </nav>
    <nav>
      <p>
        Quick links
      </p>
      <ul>
        <li>
          <a
            href="/letter/a"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            a
          </a>
        </li>
        <li>
          <a
            href="/letter/a2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            á
          </a>
        </li>
        <li>
          <a
            href="/letter/b"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            b
          </a>
        </li>
        <li>
          <a
            href="/letter/d"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            d
          </a>
        </li>
        <li>
          <a
            href="/letter/e"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            e
          </a>
        </li>
        <li>
          <a
            href="/letter/e2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            é
          </a>
        </li>
        <li>
          <a
            href="/letter/f"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            f
          </a>
        </li>
        <li>
          <a
            href="/letter/g"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            g
          </a>
        </li>
        <li>
          <a
            href="/letter/h"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            h
          </a>
        </li>
        <li>
          <a
            href="/letter/i"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            i
          </a>
        </li>
        <li>
          <a
            href="/letter/i2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            í
          </a>
        </li>
        <li>
          <a
            href="/letter/j"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            j
          </a>
        </li>
        <li>
          <a
            href="/letter/k"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            k
          </a>
        </li>
        <li>
          <a
            href="/letter/l"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            l
          </a>
        </li>
        <li>
          <a
            href="/letter/m"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            m
          </a>
        </li>
        <li>
          <a
            href="/letter/n"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            n
          </a>
        </li>
        <li>
          <a
            href="/letter/o"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            o
          </a>
        </li>
        <li>
          <a
            href="/letter/o2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ó
          </a>
        </li>
        <li>
          <a
            href="/letter/p"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            p
          </a>
        </li>
        <li>
          <a
            href="/letter/r"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            r
          </a>
        </li>
        <li>
          <a
            href="/letter/s"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            s
          </a>
        </li>
        <li>
          <a
            href="/letter/t"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            t
          </a>
        </li>
        <li>
          <a
            href="/letter/u"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            u
          </a>
        </li>
        <li>
          <a
            href="/letter/u2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ú
          </a>
        </li>
        <li>
          <a
            href="/letter/v"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            v
          </a>
        </li>
        <li>
          <a
            href="/letter/y"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            y
          </a>
        </li>
        <li>
          <a
            href="/letter/y2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ý
          </a>
        </li>
        <li>
          <a
            href="/letter/th"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            þ
          </a>
        </li>
        <li>
          <a
            href="/letter/ae"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            æ
          </a>
        </li>
        <li>
          <a
            href="/letter/oe3"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            œ
          </a>
        </li>
        <li>
          <a
            href="/letter/oe"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            ö
          </a>
        </li>
      </ul>
    </nav>
    <small>
      Copyright © 2020 Sampo Silvennoinen / StScoundrel
    </small>
  </footer>,
]
`;
